--- a/frontend/docs/components/home-page.less
+++ b/frontend/docs/components/home-page.less
@@ -1,5 +1,5 @@
-@import './globalPC.less';
-@import './globalMobile.less';
+// @import './globalPC.less';
+// @import './globalMobile.less';
 
 .homePage {
   background: #fff;
